Added mongodbCloud and fetched charts data

--- a/personal-budget/src/app/login/login.component.html
+++ b/personal-budget/src/app/login/login.component.html
@@ -1,1 +1,23 @@
-<p>login works!</p>
+<div class ="container-fluid" id="main">
+  <h1 class = "row" id = "login"> Login to manage expenses</h1>
+  <div id ="main">
+    <main>
+        <div class="row col-xs-4">
+            <label for="username">Username: </label>
+            <input type="text" name="username" id="username">
+        </div>
+        <br>
+        <div class="row">
+            <label for="password">Password:  </label>
+            <input type="password" name="password" id="password">
+        </div>
+        <br>
+        <div>
+            <button class="btn btn-primary" >Login</button>
+            <button class="btn btn-primary" >Sign Up</button>
+            <!-- <button onclick="getDashboard()">get Dashboard</button>
+            <button onclick="getSettings()">get Settings</button> -->
+        </div>
+    </main>
+    </div>
+</div>
