--- a/personal-budget/src/app/footer/footer.component.html
+++ b/personal-budget/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
         <footer role = "footerRole"> <!-- This is an A11y Change -->
           <div class="center">
-              All rights reserved &copy; Fabio Nolasco
+              All rights reserved &copy; Supriya Chinthakuntla
           </div>
          </footer>
