--- a/personal-budget/src/app/login/login.component.html
+++ b/personal-budget/src/app/login/login.component.html
@@ -1,23 +1,24 @@
-<div class ="container-fluid" id="main">
-  <h1 class = "row" id = "login"> Login to manage expenses</h1>
-  <div id ="main">
-    <main>
-        <div class="row col-xs-4">
-            <label for="username">Username: </label>
-            <input type="text" name="username" id="username">
-        </div>
-        <br>
-        <div class="row">
-            <label for="password">Password:  </label>
-            <input type="password" name="password" id="password">
-        </div>
-        <br>
-        <div>
-            <button class="btn btn-primary" >Login</button>
-            <button class="btn btn-primary" >Sign Up</button>
-            <!-- <button onclick="getDashboard()">get Dashboard</button>
-            <button onclick="getSettings()">get Settings</button> -->
-        </div>
-    </main>
+<div class="container">
+  <form id="contact" action="" method="post">
+    <h3></h3>
+    <h3>Login here to access the website</h3>
+    <div>
+      <label for="username"></label>
+      <input placeholder="Enter Username" type="text" [(ngModel)]="userName" name="username" tabindex="1" required autofocus>
     </div>
+    <div class>
+      <label for="password"> </label>
+      <input placeholder="Enter Password" type="password" [(ngModel)]="password" name="password" tabindex="3" required>
+    </div>
+    <div>
+    </div>
+    <div>
+    </div>
+    <div>
+        <button id="loginbutton" (click)="login()">Login</button>
+        New to the website?
+        <button id="signupbutton" (click)="signUp()"> Signup</button>
+    </div>
+
+  </form>
 </div>
