--- a/personal-budget/src/styles.scss
+++ b/personal-budget/src/styles.scss
@@ -43,6 +43,12 @@ h1 {
   margin: 0.67em 0;
 }
 
+header h1 {
+  color: #fff;
+  font-size: 4.2em;
+  margin-bottom: 20px;
+}
+
 /* Grouping content
    ========================================================================== */
 
