--- a/personal-budget/src/app/line-chart/line-chart.component.html
+++ b/personal-budget/src/app/line-chart/line-chart.component.html
@@ -1,1 +1,11 @@
-<p>line-chart works!</p>
+<div class="container">
+  <br />
+  <div class="row">
+    <div class="col-md-1"></div>
+    <div class="col-md-10">
+<!--       Chart.js Canvas Tag -->
+      <canvas id="barChart"></canvas>
+    </div>
+    <div class="col-md-1"></div>
+  </div>
+</div>
