--- a/personal-budget/src/app/login/login.component.html
+++ b/personal-budget/src/app/login/login.component.html
@@ -4,7 +4,7 @@
     <main id = "mainForm">
     <div >
       <label for="username"><b>Username   </b></label>
-      <input placeholder="Enter Username" type="text" [(ngModel)]="userName" name="username" tabindex="1" required autofocus>
+      <input placeholder="Enter Username" type="text" [(ngModel)]="username" name="username" tabindex="1" required autofocus>
     </div>
     <div class>
       <label for="password"><b>Password   </b> </label>
