--- a/personal-budget/src/app/login/login.component.scss
+++ b/personal-budget/src/app/login/login.component.scss
@@ -5,8 +5,6 @@
   margin-bottom: 20%;
 }
 
-
-
 #loginBtn {
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
@@ -39,6 +37,10 @@
 #password {
   width: 50%;
   height: 23px;
+}
+
+#new {
+
 }
 
 // .loginBtn {
